feat: all lambdas refactored and unit tested
